# kotogram

./: .gitignore  BUG_FIXES_SUMMARY.md  CLAUDE-GOAL.md  FORMALITY_ANALYSIS.md  README.md  debug_grammar.py  demo-ts.mjs  find_unpragmatic_sentences.py  package-lock.json  package.json  publish.sh  pyproject.toml  register-catalog.txt  train_formality.sh  train_style.sh  tsconfig.json  validate_mappings.py  validate_tatoeba.py
.github/workflows/: python_canary.yml  python_publish.yml  typescript_canary.yml  typescript_publish.yml
data/: agrammatic_adhoc.tsv  agrammatic_misclassified.tsv  jpn_model_errors.tsv  jpn_sentences_known_errors.tsv
kotogram/: __init__.py  analysis.py  augment.py  codec.py  formality_classifier.py  japanese_parser.py  kotogram.py  mecab_japanese_parser.py  reversing_codec.py  style_classifier.py  sudachi_japanese_parser.py
models/style/: config.json  formality_confusion.csv  gender_confusion.csv  grammaticality_confusion.csv  labels.json  model.pt  tokenizer.json
scripts/: analyze_missed.py  check_pattern.py  compare_formality.py  compare_gender.py  compare_grammaticality.py  cross_language_furigana.py  equivalence-set.py  generate_agrammatic.py  generate_unpragmatic.py  suggest_patterns.py  train_style.py
src/: codec.ts  index.ts  kotogram.ts  reversing-codec.ts
tests/: test_augment.py
tests-py/: __init__.py  test_cross_language_bugs.py  test_extract_token_features.py  test_formality.py  test_gender.py  test_grammaticality.py  test_japanese_parser.py  test_kotogram.py  test_reversing_codec.py  test_sudachi_parser.py
tests-ts/: cross-language-bugs.test.ts  kotogram.test.ts  reversing-codec.test.ts
