[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotogram"
version = "0.0.2"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
description = "A dual Python/TypeScript library template"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["template", "dual-library"]

[project.urls]
"Homepage" = "https://github.com/jomof/kotogram"
"Bug Reports" = "https://github.com/jomof/kotogram/issues"
"Source" = "https://github.com/jomof/kotogram"

[tool.setuptools.packages.find]
where = ["."]
include = ["kotogram*"]

[tool.pytest.ini_options]
testpaths = ["tests-py"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
